@@ -120,7 +120,7 @@
 
 	<tr>
 	  <td>Development</td>
-	  <td>2.5.21</td>
+	  <td>2.5.22</td>
 	  <td>
 	    <a href="../doc/v2.5/Documentation/out-www/">Documentation</a>,
 	    <a href="install/#2.5">download</a>.
