@@ -322,15 +322,15 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
       3
     </td>
     <td><strong>Download 
-	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.5.21-1.i386.rpm">lilypond</a>,
+	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.5.22-1.i386.rpm">lilypond</a>,
 	<a
-	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.21-1.i386.rpm">documentation</a>,
+	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.22-1.i386.rpm">documentation</a>,
 	<a
 	   href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-8.15rc3-0.i386.rpm">ghostscript</a>
 	   </strong>
       (<a href="#gs815">NOTE</a>)
     </td>
-    <td>2.5.21</td>
+    <td>2.5.22</td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
 
@@ -375,12 +375,12 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
     <td></td>
     <td><strong>Download 
 	<a
-	   href="http://lilypond.org/download/v2.5/lilypond-2.5.21.tar.gz">tarball</a>
+	   href="http://lilypond.org/download/v2.5/lilypond-2.5.22.tar.gz">tarball</a>
 	(<a href="../devel/#warning">warning</a>)
       </strong>
     </td>
     <td>
-      2.5.21
+      2.5.22
     </td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
 	team</a></td>
